# screentime

./: .gitignore  CLAUDE.md  README.md
android-child-app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android-child-app/app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
android-child-app/app/src/main/: AndroidManifest.xml
firebase/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules
firebase/functions/: package-lock.json  package.json
firebase/functions/src/: index.ts
parent-app/: firebase.json  pubspec.yaml
parent-app/android/app/: build.gradle.kts
parent-app/ios/Runner/: GoogleService-Info.plist
parent-app/ios/Runner.xcodeproj/: project.pbxproj
parent-app/lib/: firebase_options.dart  main.dart
parent-app/lib/models/: models.dart
parent-app/lib/screens/: dashboard_screen.dart  family_screen.dart  login_screen.dart
parent-app/lib/services/: auth_service.dart  firestore_service.dart
parent-app/linux/: CMakeLists.txt
parent-app/macos/Runner.xcodeproj/: project.pbxproj
parent-app/macos/Runner/Configs/: AppInfo.xcconfig
parent-app/test/: widget_test.dart
parent-app/windows/runner/: Runner.rc
shared/: pyproject.toml
shared/src/screentime_shared/: __init__.py  firestore.py  models.py
windows-client/: config.example.json  pyproject.toml
windows-client/src/screentime_windows/: cache.py  config.py  firebase_client.py  lock.py  loop.py  main.py  monitor.py  notify.py  service.py  tray.py
windows-client/tests/: test_cache.py  test_notify.py  test_tray.py
(+32 files in other folders)
