[project]
name = "screentime-windows"
version = "0.1.0"
description = "Windows screen time monitoring service"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=6.0",
    "psutil>=5.9",
    "pywin32>=306; sys_platform == 'win32'",
    "winotify>=1.1; sys_platform == 'win32'",
    "pystray>=0.19",
    "Pillow>=10.0",
    "screentime-shared",
]

[project.scripts]
screentime = "screentime_windows.main:main"

[tool.uv.sources]
screentime-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
strict = true
